# marinade-tenderize-from-hackaton

./: .gitignore  README.md  antdefaults.less  craco.config.js  package-lock.json  package.json
.netlify/: state.json
docs/: Tenderize-on-solana overview.gdoc  Tenderize.me Solana hackaton presentation v2.gslides
experiment/: cli.ts  main.ts  package-lock.json  package.json  readme.md  tadm.ts  tenderize.ts  tester.ts  tsconfig.json
experiment/util/: shell.ts
keys/: credit_list.json  credit_reserve.json  owners_fee.json  solana_bpf_tenderize-keypair.json  stake_pool.json  tSOL_token.json  user_tokens.json  validator_list.json
program/: Cargo.toml  README.md
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  stake.rs  state.rs
public/: index.html
src/: App.less  App.tsx  ant-custom.less  index.css  routes.tsx
src/actions/: credit.ts  deposit.ts  index.ts  withdraw.ts
src/components/ActionConfirmation/: index.tsx
src/components/AppBar/: index.tsx
src/components/CurrentUserBadge/: index.tsx
src/components/DepositInput/: index.tsx
src/components/Layout/: index.tsx
src/components/WithdrawInput/: index.tsx
src/config/: tokens.json
src/constants/: index.tsx  labels.ts
src/contexts/: accounts.tsx  connection.tsx  tenderize.tsx  wallet.tsx
src/hooks/: index.ts  useLendingReserves.ts  useSliderInput.ts
src/models/lending/: credit.ts  deposit.ts  index.ts  lending.ts  reserve.ts  tenderize.ts  withdraw.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: entrypoint.rs  lib.rs
src/utils/: ids.ts
src/views/: index.tsx
(+2 files in other folders)
