
[package]
name = "solana-bpf-tenderize"
version = "0.0.1"
description = "Tenderize is a liquid staking solution for Solana!"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/Tenderize/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.4.8"

[lib]
crate-type = ["cdylib", "lib"]

