
[package]
name = "solana-bpf-tenderize"
version = "0.0.1"
description = "Tenderize is a liquid staking solution for Solana!"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/Tenderize/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.5.6"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.5.7"

[lib]
crate-type = ["cdylib", "lib"]

